# pad_swarming

./: .gitignore  1682006259.csv  3880012195.csv  3923392023.csv  64412492.csv  data.test  plot.py  pos.test  t2.test
src/agents/: package.xml  setup.py
src/agents/agents/: agent.py  agent_commander.py  agent_connector.py  commander.py  connector.py  random_walk_agent.py  wand_agent.py
src/agents/launch/: agent.launch.py  random_agent.launch.py  swarm.launch.py
src/collision_avoidance/collision_avoidance/: CMakeLists.txt  package.xml
src/collision_avoidance/collision_avoidance/src/: collision_avoidance_node.cpp
src/collision_avoidance/collision_avoidance_examples/: package.xml  setup.cfg  setup.py
src/collision_avoidance/collision_avoidance_interfaces/: CMakeLists.txt  package.xml
src/pad_management/: package.xml  setup.cfg  setup.py
src/pad_management/config/: crazyflie_config_lh.yaml  crazyflie_config_vicon.yaml  flies_config_hardware.yaml  lighthouse_config.yaml  pad_arrangement.yaml  padflie_arrangement.yaml  pads_config_hardware.yaml  tracker_config.yaml  webots_config.yaml  world.yaml
src/pad_management/launch/: framework.launch.py  lighthouse.launch.py  pad.launch.py  pad_arrangement.yaml  pad_example.launch.py  vicon.launch.py
src/pad_management/pad_management/: creator.py  default_creator.py  gui_creator.py  gui_state.py  no_fly_zones.py  pad_broadcaster.py  pad_creator.py  pad_destruction.py  pad_distributor.py  pad_land_circle.py  pad_spawner.py  pad_traffic_controller.py  point_cloud_combiner.py  point_finder.py
src/pad_management_interfaces/: CMakeLists.txt  package.xml
src/pad_management_interfaces/srv/: AcquireCrazyflie.srv  PadCircleBehaviour.srv  PadIdleTarget.srv  PadPositionReset.srv  PadRightAcquire.srv  PadRightRelease.srv  PointFinder.srv
src/padflie_connect/: package.xml  setup.cfg  setup.py
src/padflie_connect/padflie_connect/: padflie_commander.py  padflie_connection.py  padflie_connector.py
src/padflies/: package.xml  setup.cfg  setup.py
src/padflies/padflies/: _hl_commander_minimal.py  _ll_commander_minimal.py  _padflie_routines.py  _padflie_states.py  _padflie_tf.py  _qos_profiles.py  actor.py  charge_controller.py  commander.py  connection_manager.py  controller.py  padflie.py  routines.py  yaw_commander.py
src/padflies_cpp/: CMakeLists.txt  package.xml
src/padflies_cpp/include/padflies_cpp/: actor.hpp  charge_controller.hpp  collision_avoidance_client.hpp  commander.hpp  hardware_parameter_controller.hpp  hardware_state_controller.hpp  hl_commander_minimal.hpp  ll_commander_minimal.hpp  pad_control.hpp  padflie_tf.hpp  position_controller.hpp  yaw_controller.hpp
src/padflies_cpp/src/: actor.cpp  charge_controller.cpp  collision_avoidance_client.cpp  commander.cpp  hardware_parameter_controller.cpp  hardware_state_controller.cpp  hl_commander_minimal.cpp  ll_commander_minimal.cpp  pad_control.cpp  padflie.cpp  padflie_tf.cpp  position_controller.cpp  yaw_controller.cpp
src/padflies_interfaces/: CMakeLists.txt  package.xml
src/padflies_interfaces/msg/: AvailabilityInfo.msg  BBox.msg  PadflieInfo.msg  SendTarget.msg
src/rqt_crazyflies/: CMakeLists.txt  add_plugin.xml  package.xml  state_plugin.xml
src/rqt_crazyflies_add/: add_plugin.xml  package.xml  setup.cfg  setup.py
(+24 files in other folders)
